# COCO-Assistant

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  coco_assistant.py  coco_stats.py  coco_visualiser.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
coco_assistant/: __init__.py  coco_assistant.py  coco_converters.py  coco_maker.py  coco_stats.py  coco_visualiser.py  gen_anchors.py
coco_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
coco_assistant/utils/: __init__.py  anchors.py  det2seg.py  misc.py  remapper.py
docs/: CHANGELOG.md  CONTRIBUTING.md  api.md  gen_doc_stubs.py  installation.md  summary.md  usage.md
installation/: index.html
reference/SUMMARY/: index.html
reference/coco_assistant/: index.html
reference/coco_stats/: index.html
reference/coco_visualiser/: index.html
reference/utils/anchors/: index.html
reference/utils/det2seg/: index.html
reference/utils/logger/: index.html
reference/utils/misc/: index.html
reference/utils/remapper/: index.html
search/: search_index.json
summary/: index.html
tests/: __init__.py  clear.sh  data_getter.py  test_coco_assistant.py  tests.py
usage/: index.html
