[tool]
[tool.poetry]
name = "coco_assistant"
version = "0.4.0"
homepage = "https://github.com/ashnair1/coco_assistant"
description = "Helper for dealing with MS-COCO annotations."
authors = ["Ashwin Nair <ashnair0007@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "coco_assistant" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"

# Mandatory 
matplotlib = "^3.4.2"
pandas = "^1.3.1"
#pycocotools = {url = "https://github.com/ashnair1/coco-ash/archive/refs/tags/pycoco-ash.tar.gz"}
coco-ash = "^2.0.2" # Fork of pycocotools
seaborn = "^0.11.1"
#termcolor = "^1.1.0"
tqdm = "^4.62.0"

black  = { version = "20.8b1", optional = true}
isort  = { version = "5.6.4", optional = true}
flake8  = { version = "3.8.4", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^6.2.0", optional = true}
pytest-cov  = { version = "^2.10.1", optional = true}
coverage = {version = "^5.5", optional=true}
tox  = { version = "^3.20.1", optional = true}
virtualenv  = { version = "^20.2.2", optional = true}
pip  = { version = "^20.3.1", optional = true}
livereload = {version = "^2.6.3", optional = true, extras = ["doc"]}
mkdocs  = { version = "^1.1.2", optional = true, extras = ["doc"]}
mkdocs-include-markdown-plugin  = { version = "^1.0.0", optional = true, extras = ["doc"]}
mkdocs-material  = { version = "^7.1.0", optional = true, extras = ["doc"]}
mkdocstrings  = { version = "^0.13.6", optional = true, extras = ["doc"]}
mkdocs-material-extensions  = { version = "^1.0.1", optional = true, extras = ["doc"]}
mkdocs-literate-nav = {version = "^0.4.0", optional = true, extras = ["doc"]}
mkdocs-gen-files = {version = "^0.3.3", optional = true, extras = ["doc"]}
mkdocs-section-index = {version = "^0.3.1", optional = true, extras = ["doc"]}
mkdocs-autorefs = {version = "0.1.1", optional = true, extras = ["doc"]}
twine  = { version = "^3.3.0", optional = true}
pre-commit = {version = "^2.12.0", optional = true}
requests = {version = "^2.26.0"}
toml = {version = "^0.10.2", optional = true}


[tool.poetry.extras]
test = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "pytest-cov",
    "coverage"
    ]

dev = ["tox", "pre-commit", "virtualenv", "pip", "twine", "toml"]

doc = [
    "livereload",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-include-markdown-plugin",
    "mkdocs-literate-nav",
    "mkdocs-material",
    "mkdocs-material-extension",
    "mkdocstrings",
    "mkdocs-autorefs",
    "mkdocs-section-index"
    ]

[tool.poetry.scripts]
coco-assistant = 'coco_assistant.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
sections = ['FUTURE','STDLIB','THIRDPARTY','FIRSTPARTY','LOCALFOLDER']
known_first_party = ['coco_assistant']
force_grid_wrap = 0
line_length = 100
multi_line_output = 3
